Bug 346137 - Alignment errors when locale varies
Summary: Alignment errors when locale varies
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: ircview (other bugs)
Version First Reported In: frameworks
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: argonel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-13 12:06 UTC by Safa Alfulaij
Modified: 2016-08-20 13:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Safa Alfulaij 2015-04-13 12:06:55 UTC
If the locale is using indain numbers, All the alignment become wrong, Since Indian numbers are handled as RTL characters.

Examples: http://imgur.com/umodv6e,pE1UKKE,K9gzA39,R9YNDB0,Oy8ooeV#0
Comment 1 Safa Alfulaij 2016-08-20 13:48:45 UTC
Git commit 5bc9e0ac69072e2f6fcb8be56d693c428994f4b9 by Safa Alfulaij.
Committed on 20/08/2016 at 13:47.
Pushed by safaalfulaij into branch 'master'.

Fix alignment issues of Bi-Directional text.

The previous code broke after porting to Qt5,
and alignment get messed up. This fixes that.
REVIEW: 126881

M  +32   -102  src/viewer/ircview.cpp

http://commits.kde.org/konversation/5bc9e0ac69072e2f6fcb8be56d693c428994f4b9